kubernetes/Version1.3/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: alfa-romeo-db
  namespace: alfa-romeo
  labels:
    app: alfa-romeo-db
spec:
  clusterIP: None
  selector:
    app: alfa-romeo-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    name: postgres
