kubernetes/Version1.3/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: alfa-romeo
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
