kubernetes/Version1.3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alfa-romeo-ingress
  namespace: alfa-romeo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: alfa-romeo-web.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alfa-romeo-web
            port:
              number: 80
  - host: "*.alfa-romeo-web.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alfa-romeo-web
            port:
              number: 80
